2006-06-08  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure.ac.in:
  - Moved detection of and workaround for broken grep to tools/splitconfig
 tools/Makefile.am:
  - Added tools/splitconfig
 tools/preprelease:
  - Don't erase reference documentation every time (takes too much time)
 tools/splitconfig:
  - New
  - Encapsulates workaround for broken greps
  - Should now also detect latest bug with "grep -w -F" in some GNU greps
  - Major cleanup of grep failure detection
2006-06-02  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configitems:
  - One item said "private" instead of "internal"
 configure.ac.in:
  - Fixed warning in PQprepare() (can't have those in maintainer mode)
 include/pqxx/binarystring.hxx:
  - Documented escape_binary() as deprecated
 include/pqxx/connection_base.hxx, include/pqxx/transaction_base.hxx,
 src/connection_base.cxx, src/transaction_base.cxx:
  - Implemented bytea equivalents of esc()
 test/test062.cxx:
  - Use new transaction_base::esc_raw() function
2006-06-01  Jeroen T. Vermeulen <jtv@xs4all.nl>
 win32/vc-libpqxx.mak.template:
  - Replaced backslashes in paths with slashes
  - Fixes "incomplete makefile" problem
2006-05-29  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/connection_base.cxx:
  - Compile fix  for old libpq versions, thanks Pawel Sikora
2006-05-28  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure.ac.in:
  - Removed -R option (thanks Pawel Sikora and Roger Leigh for explaining)
 doc/libpqxx.xml:
  - Replaced sqlesc() with esc()
 test/test000.cxx:
  - Include <locale> if appropriate
 tools/svnignore:
  - New
  - Updates svn:ignore properties of files/dirs based on .cvsignore files
 tools/preprelease:
  - Clean up old files from reference documentation--saved tons of space!
2006-05-27  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure.ac.in:
  - Check for new PQescapeStringConn()
  - Check for new PQescapeByteaConn()
 include/pqxx/connection_base.hxx, include/pqxx/transaction_base.hxx,